--- a/idex1.html
+++ b/idex1.html
@@ -94,7 +94,7 @@
 
         <div class="login-box">
             <h2 class="heading-login-box">Login</h2>
-            <form class="form">
+            <form class="form" id="form">
                 <div class="user-box">
                     <input class="user-box-input" type="text" required></input>
                     <label class="user-box-label">Username</label>
