--- a/idex1.html
+++ b/idex1.html
@@ -96,7 +96,7 @@
             <h2 class="heading-login-box">Login</h2>
             <form class="form" id="form">
                 <div class="user-box">
-                    <input class="user-box-input" type="text" required></input>
+                    <input class="user-box-input" type="text" id="user-box-input" required></input>
                     <label class="user-box-label">Username</label>
                 </div>
         
