--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
  
-  <script  src="app.js" ></script> 
+  <script  src="app2.js" ></script> 
  
 </body>
 </html>
